# Henu-Wifi-Rust

./: Cargo.toml  Dockerfile  README.MD  settings.yaml
.github/workflows/: rust.yml
src/: auto_login.rs  main.rs  parameters.rs
