[package]
name = "Henu-Wifi-Rust"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
fantoccini = "0.22.0"
fs2 = "0.4.3"
# openssl = { version = "0.10.73" , features = ["vendored"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
surge-ping = "0.8.2"
tokio = { version = "1.47.1",features = ["full"] }
